<resources>
    <string name="app_name">Tripescape</string>
    <string name="accion_mostrar">Mostrar Lugares</string>
    <string name="accion_preferencias">Preferencias</string>
    <string name="accion_acerca_de">Acerca de </string>
    <string name="accion_salir">Salir</string>
    <string name="action_settings">Settings</string>
    <string name="fui_default_toolbar_title">Tipo de Autentificación</string>
    <string name="fui_sign_in_with_email">Entra con tu correo</string>
    <string name="fui_progress_dialog_signing_up">Creando cuenta...</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="date">Date</string>
    <string name="persons">Persons</string>
    <string name="enterData">Enter Data</string>
    <string name="chooseDestination">Choose Destination</string>
    <string name="budget">Budget</string>
    <string name="backPressedError">There is no previous page!</string>
    <string name="nextPressedError">There is no next page!</string>
    <string name="endDateError">You cannot go to the past!</string>
    <string name="startDateError">Incorrect start date!</string>
    <string name="attractions">Attractions</string>
    <string name="activities">Activities</string>
    <string name="enterDataTitle">Enter your trip data</string>
    <string name="chooseDestinationTitle">Choose destination</string>
    <string name="manageActivitesTitle">Manage your attractions</string>
    <string name="detailsTitle">Activity Details</string>
    <string name="tripPlanTitle">Trip Plan</string>
    <string name="included">Included</string>
    <string name="total_price_summary">Total price summary</string>
    <string name="total_price">Total price</string>
    <string name="not_included">Not included</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="remove">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="search">New search</string>
    <string name="mytrips">My trips</string>
    <string name="action_text">Choose an action</string>
    <string name="trip_text">Select a saved trip</string>
    <string name="exit">Exit and save</string>
    <string name="exit_text">Would you like to exit and save your data?</string>
    <string name="share_confirmation_question">Are you sure you want to share your trip information per email?</string>
    <string name="removeTrip_confirmation_question">Are you sure you want to delete the selected trip?</string>
    <string name="app_description">"Tripescape, plan your excursions and sport activities in the easiest way! \nBecause it matters what you want to do and not where.\n"</string>
    <string name="facebook_application_id" translatable="false">1230640850619857</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1230640850619857</string>
</resources>
