<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/title_size"/>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                app:srcCompat="@drawable/user_icon_off" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            android:layout_gravity="center"
            android:padding="5dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/back" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/circle1"
            android:src="@drawable/circle_full"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/circle2"
            android:src="@drawable/circle_empty"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/circle3"
            android:src="@drawable/circle_empty"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/circle4"
            android:src="@drawable/circle_empty"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextsButton"
            android:layout_gravity="center"
            android:padding="5dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/next"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>